--- a/mia/css/estilo4.css
+++ b/mia/css/estilo4.css
@@ -3,73 +3,141 @@
 *{
 	margin: 0;
 	padding: 0;
+	box-sizing: border-box;
+	
 }
 
-body{
-	background-color:#F2F2F2;
+/*ESTO PARA EL 3D*/
+
+.content-all { 
+
+	margin-left: 800px;
+	margin-top: 50px;
+	width: 210px;
+	perspective: 1000px;
+	position: relative;
+	
+
 }
 
 
+.content-carrousel	{
 
-
-
-/* aqui esta el pie de mi página de usuarios*/
-
-
-.footer	{
-
-	background: #5080ef none repeat scroll 0 0;
-	border-radius: 5px;
-	bottom: 0;
-	display: flex;
-	height: 100px;
-	margin-top: 854px;
 	width: 100%;
+	position: absolute;
+	animation: rotar 10s infinite linear;
+	transform-style: preserve-3d;
+	
 }
 
-.footimg	{
 
-	margin-left: 39%;
-	margin-top: 18px;
-	text-align: center;
-}
+.content-carrousel:hover  {
 
-/* como sera el boton que me lleve para arriba la flecha */
-.crunchify-top:hover {
-	background-color: #DBE6FF;
-	color: #fff !important;
-	text-decoration: none;
-
-}
-
-.crunchify-top {
-
-	background-color: rgba(0, 0, 0, 0.2);
-	border-radius: 3.2rem;
-	bottom: 1rem;
-	color: #fff;
+	animation-play-state: paused;
 	cursor: pointer;
-	display=none;
-	font-size: 1.4rem;
-	height: 3.2rem;
-	line-height: 3.2rem;
-	position: fixed;
-	right: 1rem;
-	text-align: center;
-	text-decoration: none;
-	width: 3.2rem;
 
 }
 
 
 
+.content-carrousel figure {
+
+	width: 100%;
+	height: 196px;
+	overflow: hidden;
+	position: absolute;
+	box-shadow: 0px 0px 20px 0px black;
+	
+}
+
+.content-carrousel figure:hover{
+
+
+	box-shadow: 0px 0px 0px 0px black;
+	transition: all 300ms;
+
+}
 
 
 
+.content-carrousel figure:nth-child(1) {transform: rotateY(0deg) translateZ(300px);
+
+}
+
+.content-carrousel figure:nth-child(2) {transform: rotateY(40deg) translateZ(300px);
+
+}
+
+.content-carrousel figure:nth-child(3) {transform: rotateY(80deg) translateZ(300px);
+
+}
+
+.content-carrousel figure:nth-child(4) {transform: rotateY(120deg) translateZ(300px);
+
+}
+
+.content-carrousel figure:nth-child(5) {transform: rotateY(160deg) translateZ(300px);
+
+}
+
+.content-carrousel figure:nth-child(6) {transform: rotateY(200deg) translateZ(300px);
+
+}
+
+.content-carrousel figure:nth-child(7) {transform: rotateY(240deg) translateZ(300px);
+
+}
+
+.content-carrousel figure:nth-child(8) {transform: rotateY(280deg) translateZ(300px);
+
+}
+
+.content-carrousel figure:nth-child(9) {transform: rotateY(320deg) translateZ(300px);
+
+}
+
+.content-carrousel figure:nth-child(10) {transform: rotateY(360deg) translateZ(300px);
+
+}
 
 
- 
+.content-carrousel img {
+
+	width: 100%;
+	
+}
+
+/*animacion se agrande*/
+
+.content-carrousel img:hover {
+
+	transform: scale(0.8);
+	transition: all 300ms;
+}
+
+/*Controlar animacion esto para que rote*/
+
+@Keyframes rotar {	
+
+		from	{		transform: rotateY(0deg);
+
+				}to{
+					     transform: rotateY(360deg);
+	
 
 
+	}
+}
 
+/*Termina carrousel*/
 
+#tarjeta	{
+
+	margin-top: 600px;
+}
+
+#descripcion {
+
+	margin-top: -500px;
+	margin-left: 320px;
+}
