--- a/mia/css/estilo6.css
+++ b/mia/css/estilo6.css
@@ -1,4 +1,4 @@
-<!--Pagina de administrador -->
+<!--Pagina de administradorver -->
 
 *{
 	margin: 0;
@@ -33,7 +33,7 @@ body{
 	bottom: 0;
 	display: flex;
 	height: 100px;
-	margin-top: 528px;
+	margin-top: 695px;
 	width: 100%;
 }
 
