--- a/mia/css/estilo10.css
+++ b/mia/css/estilo10.css
@@ -1,4 +1,4 @@
-<!--Pagina de administrador -->
+/*<!--Pagina hacemos.php(condiciones de compra)-->*/
 
 *{
 	margin: 0;
@@ -9,23 +9,21 @@ body{
 	background-color:#F2F2F2;
 }
 
-/* aqui esta el pie de mi página de administradores*/
 
 
 
-#seccion	{
+.card-img-top	{
 
-	margin-left: 15px;
 	
-
+	margin-left: 160px !important;
 }
 
-#table	{ text-align: center;
+
+/* como sera las imagenes mostradas y donde se colocaran */
 
 
 
-
-}
+/* aqui esta el pie de mi página de usuarios*/
 
 
 .footer	{
@@ -35,7 +33,7 @@ body{
 	bottom: 0;
 	display: flex;
 	height: 100px;
-	margin-top: 295px;
+	margin-top: 100px;
 	width: 100%;
 }
 
@@ -74,9 +72,39 @@ body{
 }
 
 
+/* como sera las imagenes mostradas y donde se colocaran */
+
+.card-img-top	{
+
+	margin-left: 140px;
+	margin-top: 20px;
+	
+}
+
+/* como se vera el titulo en el cuadro */
+
+.card-title	{
+
+	text-align: center;
+}
+
+/* como se vera el texto */
+
+.card-text	{
+
+	text-align: justify;
+
+}
 
 
 
+/* propiedades del bonton mostrar productos */
+
+.btn {
+
+	margin-top: -20px;
+	margin-left: 200px;
+}
 
 
 
